fixed the issue where on mobile navigation bar was not shown

--- a/css/style.css
+++ b/css/style.css
@@ -732,7 +732,7 @@ strong {
   }
 
   .home {
-    height: 90vh;
+    height: 85vh;
     background-image: url("../images/hero-bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
